[tool.poetry]
name = "sptk"
version = "0.1"
description = "The Spectral Parameters Toolkit (SPTK) is a Python package for investigating the ability of a multispectral imaging system to identify distinct materials and material groups through differences in reflectance spectra."
readme = "README.md"
license = "MIT"
keywords = ["reflectance", "spectroscopy", "spectral imaging", "planetary surfaces", "remote sensing", "spectral parameters"]
authors = ["Roger Stabbins <r.stabbins@nhm.ac.uk>"]
maintainers = ["Roger Stabbins <r.stabbins@nhm.ac.uk>"]
packages = [{include = "sptk", from = "src"}]
homepage = "https://github.com/rbstabbins/sptk"
repository = "https://github.com/rbstabbins/sptk"

classifiers = [ 
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Researchers",
  "Topic :: Planetary Science :: Reflectance Spectroscopy",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python= "^3.10.8"
click= "~8.1"
ipykernel= "^6.19.2"
ipython= "^8.7.0"
matplotlib= "^3.6.2"
numpy= "^1.23.5"
pandas= "~1.5.2"
pillow= "^9.3.0"
pip= "^22.3.1"
pyqt= "^5.15.7"
scikit-learn= "^1.1.3"
scipy= "^1.9.3"
seaborn= "^0.12.2"
setuptools= "^65.6.3"
tabulate= "^0.8.10"
toml= "^0.10.2"
wheel= "^0.37.1"
pysptools= "==0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
