[tool.poetry]
name = "sptk"
version = "0.1a2"
description = "The Spectral Parameters Toolkit (SPTK) is a Python package for investigating the ability of a multispectral imaging system to identify distinct materials and material groups through differences in reflectance spectra."
readme = "README.md"
license = "MIT"
keywords = ["reflectance", "spectroscopy", "spectral imaging", "planetary surfaces", "remote sensing", "spectral parameters"]
authors = ["Roger Stabbins <r.stabbins@nhm.ac.uk>"]
maintainers = ["Roger Stabbins <r.stabbins@nhm.ac.uk>"]
packages = [{include = "sptk", from = "src"}]
homepage = "https://github.com/rbstabbins/sptk"
repository = "https://github.com/rbstabbins/sptk"

classifiers = [ 
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python= "^3.10.8"
click= "==8.1"
ipykernel= "^6.17.0"
matplotlib= "==3.6.2"
numpy= "==1.23.5"
pandas= "==1.5.2"
pillow= "==9.3.0"
scikit-learn= "==1.1.3"
scipy= "==1.9.3"
seaborn= "==0.12.2"
statsmodels= "==0.13.2"
tabulate= "==0.8.10"
toml= "^0.10.2"
pysptools= "==0.15.0"

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
